--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Compardos</title>
+        <link rel="shortcut icon" href="../img/CLogo.png" type="image/x-icon">
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
-        
         
         <script src="../js/app.js"></script>
     </body>
