Agregando iconos a carpetas

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,7 +9,29 @@
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
-        
+        <header class="header">
+            <figure class="header_logo">
+                <img class="logo" src="../img/CLogo.png" alt="Logo comparados">
+                <p class="header_text">Comparados</p>
+            </figure>
+            <nav class="menu">
+                <ul class="menu_list">
+                    <li class="menu_item">
+                        <a href="">Categorias</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="">Favoritos</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="">Login</a>
+                    </li>
+                    <li class="menu_item menu_item-cart">
+                        <img src="" alt="">
+                        <a href="">Tu carrito</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <script src="../js/app.js"></script>
     </body>
 </html>
