Agregando estilos al header y nav

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,25 +9,28 @@
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
-        <header class="header">
-            <figure class="header_logo">
-                <img class="logo" src="../img/CLogo.png" alt="Logo comparados">
-                <p class="header_text">Comparados</p>
+        <header class="header container-box" >
+            <figure class="logo_container">
+                <a href="#">
+                    <img class="logo" src="../img/CLogo.png" alt="Logo comparados">
+                </a>
             </figure>
             <nav class="menu">
                 <ul class="menu_list">
                     <li class="menu_item">
-                        <a href="">Categorias</a>
+                        <a href="" class="menu_anchor menu_anchor-hover">Categorias</a>
                     </li>
                     <li class="menu_item">
-                        <a href="">Favoritos</a>
+                        <a href="" class="menu_anchor menu_anchor-hover">Favoritos</a>
                     </li>
                     <li class="menu_item">
-                        <a href="">Login</a>
+                        <a href="" class="menu_anchor menu_anchor-hover">Login</a>
                     </li>
+                </ul>
+                <ul class="cart_container">
                     <li class="menu_item menu_item-cart">
-                        <img src="" alt="">
-                        <a href="">Tu carrito</a>
+                        <img class="" src="../img/icons/carrito-de-compras.png" alt="carrito de compras">
+                        <a href="" class="manu_anchor menu_anchor-cart">Tu carrito</a>
                     </li>
                 </ul>
             </nav>
