Cambiando y reestructurando el header

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,31 +9,39 @@
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
-        <header class="header container-box" >
-            <figure class="logo_container">
-                <a href="#">
-                    <img class="logo" src="../img/CLogo.png" alt="Logo comparados">
-                </a>
-            </figure>
-            <nav class="menu">
-                <ul class="menu_list">
-                    <li class="menu_item">
-                        <a href="" class="menu_anchor menu_anchor-hover">Categorias</a>
-                    </li>
-                    <li class="menu_item">
-                        <a href="" class="menu_anchor menu_anchor-hover">Favoritos</a>
-                    </li>
-                    <li class="menu_item">
-                        <a href="" class="menu_anchor menu_anchor-hover">Login</a>
-                    </li>
-                </ul>
-                <ul class="cart_container">
-                    <li class="menu_item menu_item-cart">
-                        <img class="" src="../img/icons/carrito-de-compras.png" alt="carrito de compras">
-                        <a href="" class="manu_anchor menu_anchor-cart">Tu carrito</a>
-                    </li>
-                </ul>
-            </nav>
+        <header class="header container-box">
+            <section class="navbar-container">
+                <figure class="logo_container">
+                    <a href="#">
+                        <img class="logo" src="../img/CLogo.png" alt="Logo comparados">
+                    </a>
+                </figure>
+                <nav class="menu">
+                    <ul class="menu_list">
+                        <li class="menu_item">
+                            <a href="" class="menu_anchor menu_anchor-hover">Categorias</a>
+                        </li>
+                        <li class="menu_item">
+                            <a href="" class="menu_anchor menu_anchor-hover">Favoritos</a>
+                        </li>
+                        <li class="menu_item">
+                            <a href="" class="menu_anchor menu_anchor-hover">Login</a>
+                        </li>
+                    </ul>
+                    <ul class="cart_container">
+                        <li class="menu_item menu_item-cart">
+                            <img class="" src="../img/icons/carrito-de-compras.png" alt="carrito de compras">
+                            <a href="" class="manu_anchor menu_anchor-cart">Tu carrito</a>
+                        </li>
+                    </ul>
+                </nav>
+            </section>
+            <section class="buscador_container">
+                <h1 class="buscador_titulo">Escribe el producto que deseas comparar</h1>
+                <form class="" action="">
+                    
+                </form>
+            </section>
         </header>
         <script src="../js/app.js"></script>
     </body>
