Agregando la seccion del buscador y el boton

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -36,12 +36,18 @@
                     </ul>
                 </nav>
             </section>
+            <!-- Buscador  -->
             <section class="buscador_container">
                 <h1 class="buscador_titulo">Escribe el producto que deseas comparar</h1>
-                <form class="" action="">
-                    
+                <form id="buscador" class="buscador_form" action="">
+                    <div class="buscador">
+                        <img src="../img/icons/busqueda-de-lupa.png" alt="lupa">
+                        <input class="buscador_input" type="text" placeholder="Busca un producto">
+                    </div>
+                    <input class="buscador_input submit" type="submit" value="Comparar">
                 </form>
             </section>
+            <!-- Fin Buscador -->
         </header>
         <script src="../js/app.js"></script>
     </body>
