Agregando las imagenes de los productos a las carpetas, farmatodo y elplazas

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -49,6 +49,34 @@
             </section>
             <!-- Fin Buscador -->
         </header>
+        <main>
+            <div id="" class="sibtitulo_comparados">
+                <h2>Comparados</h2>
+                <p>Estos son los productos que conseguimos en la busqueda realizada</p>
+            </div>
+            <section id="productos_buscados" class="productos_buscados">
+                <div>
+                    <figure>
+                        <img src="../img/productos/farmatodo/harinaPan.png" alt="">
+                    </figure>
+                    <div>
+                        <p>Harina Pan</p>
+                        <p></p>
+                        <p></p>
+                    </div>
+                    <button></button>
+                </div>
+                <div>
+                    <figure>
+                        <img src="../img/productos/Elplazas/harinaPan.jpg" alt="">
+                    </figure>
+                    <div>
+
+                    </div>
+                    <button></button>
+                </div>
+            </section>
+        </main>
         <script src="../js/app.js"></script>
     </body>
 </html>
