Creando las carts de comparaciones

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -50,28 +50,35 @@
             <!-- Fin Buscador -->
         </header>
         <main>
-            <div id="" class="sibtitulo_comparados">
-                <h2>Comparados</h2>
-                <p>Estos son los productos que conseguimos en la busqueda realizada</p>
+            <div id="" class="info_comparados">
+                <h2 class="info_subtitulo">Comparados</h2>
+                <p class="info_parrafo">Estos son los productos que conseguimos en la busqueda realizada</p>
             </div>
             <section id="productos_buscados" class="productos_buscados">
-                <div>
+                <div id="cart_uno" class="cart_uno carts">
                     <figure>
-                        <img src="../img/productos/farmatodo/harinaPan.png" alt="">
+                        <img class="image_product" src="../img/productos/farmatodo/harinaPan.png" alt="">
                     </figure>
-                    <div>
-                        <p>Harina Pan</p>
-                        <p></p>
-                        <p></p>
+                    <div class="cart_info">
+                        <p>Harina Pan de Maiz 1kg</p>
+                        <p>$1.09</p>
+                        <p>
+                            Farmatodo
+                            <i></i>
+                        </p>
                     </div>
                     <button></button>
                 </div>
-                <div>
-                    <figure>
-                        <img src="../img/productos/Elplazas/harinaPan.jpg" alt="">
+                <div id="cart_dos" class="cart_dos carts">
+                    <figure class="cart_figure">
+                        <img class="image_product" src="../img/productos/Elplazas/harinaPan.jpg" alt="">
                     </figure>
-                    <div>
-
+                    <div class="cart_info">
+                        <p>Harina Pan de Maiz 1kg</p>
+                        <p>$1.11</p>
+                        <p>
+                            ElPlazas <i></i>
+                        </p>
                     </div>
                     <button></button>
                 </div>
