--- a/src/html/index.html
+++ b/src/html/index.html
@@ -85,6 +85,7 @@
                 </div>
             </section>
         </main>
+        <script src="../js/db.js"></script>
         <script src="../js/app.js"></script>
     </body>
 </html>
