--- a/src/html/comparar.html
+++ b/src/html/comparar.html
@@ -58,7 +58,7 @@
             <section id="productos_buscados" class="productos_buscados">
                 <div id="cart_uno" class="cart_uno carts">
                     <figure id="cart_figure" class="cart_figure">
-                        <img class="image_product" src="../img/productos/farmatodo/harinaPan.png" alt="">
+                        <img id="image_product1" class="image_product" src="../img/productos/farmatodo/harinaPan.png" alt="">
                     </figure>
                     <div class="cart_info">
                         <p id="cart_nameProduct">Harina Pan de Maiz 1kg</p>
@@ -68,11 +68,10 @@
                             <i></i>
                         </p>
                     </div>
-                    <button></button>
                 </div>
                 <div id="cart_dos" class="cart_dos carts">
                     <figure id="cart_figure2" class="cart_figure">
-                        <img class="image_product" src="../img/productos/Elplazas/harinaPan.jpg" alt="">
+                        <img id="image_product2" class="image_product" src="../img/productos/Elplazas/harinaPan.jpg" alt="">
                     </figure>
                     <div id="cart_info" class="cart_info">
                         <p id="cart_nameProduct2">Harina Pan de Maiz 1kg</p>
@@ -81,20 +80,49 @@
                             El Plazas <i></i>
                         </p>
                     </div>
-                    <section class="">
-                        <div class="container_buttonComparar">
-                            <button id="button_comparar">Comparar</button>
-                        </div>
-                        <div id="container_comparar">
-                            <p id="mensaje_comparar"></p>
-                        </div>
-                    </section>
-                    <div class="reiniciar_container">
-                        <button id="reiniciar_comparados">Reiniciar</button>
-                    </div>
+                </div>
+            </section>
+            <section>
+                <div id="container_comparar">
+                    <p id="mensaje_comparar"></p>
+                </div>
+                <div class="container_buttonComparar">
+                    <button id="button_comparar" class="submit">Comparar</button>
+                </div>
+                <div class="reiniciar_container">
+                    <button id="reiniciar_comparados" class="submit">Reiniciar</button>
                 </div>
             </section>
         </main>
         <script src="../js/app.js"></script>
     </body>
+    <footer>
+        <div class="footer-left">
+            <figure class="container-logo-footer">
+                <a href="#">
+                    <img class="logo-footer" src="../img/CLogo.png" alt="comparados">
+                </a>
+            </figure>
+            <p>8XP5+CJ3, Carr. Panamericana, Los Teques 1201, Miranda</p>
+        </div>
+        <div class="footer-center">
+            <h3>Menú Principal</h3>
+            <button>Categorías</button>
+            <button>Favoritos</button>
+            <button>Comparador de Precios</button>
+            <button>Login</button>
+        </div>
+        <div class="footer-center">
+            <h3>Descubre</h3>
+            <button>El Equipo</button>
+            <button>Nuestra Historia</button>
+            <button>Nuestro Lema</button>
+        </div>
+        <div class="footer-right">
+            <h3>Encuéntranos en</h3>
+            <button>Facebook</button>
+            <button>Instagram</button>
+            <button>Twitter</button>
+        </div>
+    </footer>
 </html>
