Arreglando el js para mostrar porcentajes

--- a/src/html/comparar.html
+++ b/src/html/comparar.html
@@ -25,7 +25,7 @@
                             <a href="" class="menu_anchor menu_anchor-hover">Favoritos</a>
                         </li>
                         <li class="menu_item">
-                            <a href="" class="menu_anchor menu_anchor-hover">Login</a>
+                            <a href="../html/form.html" class="menu_anchor menu_anchor-hover">Login</a>
                         </li>
                     </ul>
                     <ul class="cart_container">
