--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../img/CLogo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/styles1.css">
     <title>COMPARADOS</title>
@@ -52,7 +53,7 @@
                 <li><a href="#">Categorías</a></li>
                 <li><a href="#">Favoritos</a></li>
                 <li><a href="../html/comparar.html">Comparador de Precios</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="../html/form.html">Login</a></li>
             </ul>
 
             <form class="search-form">
