--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="#">
                             <img class="logo" src="../img/CLogo.png" alt="Logo comparados">
                         </a> -->
-                <h1 class="logo"><a href="/">COMPARADOS</a></h1>
+                <h1 class="logo"><a href="./index.html">COMPARADOS</a></h1>
             </div>
             <div class="container-user">
                 <i class="fa-solid fa-user"></i>
