--- a/src/html/comparar.html
+++ b/src/html/comparar.html
@@ -12,7 +12,7 @@
         <header class="header container-box">
             <section class="navbar-container">
                 <figure class="logo_container">
-                    <a href="../html/index.html">
+                    <a href="/index.html">
                         <img class="logo" src="../img/CLogo.png" alt="Logo comparados">
                     </a>
                 </figure>
