Arregalndo urls de carpetas e index

--- a/src/html/comparar.html
+++ b/src/html/comparar.html
@@ -99,7 +99,7 @@
     <footer>
         <div class="footer-left">
             <figure class="container-logo-footer">
-                <a href="#">
+                <a href="/index.html">
                     <img class="logo-footer" src="../img/CLogo.png" alt="comparados">
                 </a>
             </figure>
