--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/CLogo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/styles1.css">
+    <link rel="shortcut icon" href="/src/img/CLogo.png" type="image/x-icon">
+    <link rel="stylesheet" href="/src/css/normalize.css">
+    <link rel="stylesheet" href="/src/css/styles1.css">
     <title>COMPARADOS</title>
 </head>
 <body>
@@ -330,7 +330,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="../img/descuentos/DctoMaltayPepsi.jpg" alt="DctoMaltayPepsi">
+                            <img class="Imagen" src="/src/img/descuentos/DctoMaltayPepsi.jpg" alt="DctoMaltayPepsi">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN BEBIDAS</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -346,7 +346,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="../img/descuentos/DctoPañales.jpg" alt="DctoPañales">
+                            <img class="Imagen" src="/src/img/descuentos/DctoPañales.jpg" alt="DctoPañales">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN PAÑALES</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -360,7 +360,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="../img/descuentos/DctoHelados.jpg" alt="DctoHelados">
+                            <img class="Imagen" src="/src/img/descuentos/DctoHelados.jpg" alt="DctoHelados">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN HELADOS</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -374,7 +374,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="../img/descuentos/DctoSnaks.jpg" alt="DctoSnaks">
+                            <img class="Imagen" src="/src/img/descuentos/DctoSnaks.jpg" alt="DctoSnaks">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN SNAKS</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -388,7 +388,7 @@
                 <div>
                     <a href="/">
                         <picture>
-                            <img class="Imagen" src="../img/descuentos/Dcto.Nestea.jpg" alt="DctoNestea">
+                            <img class="Imagen" src="/src/img/descuentos/Dcto.Nestea.jpg" alt="DctoNestea">
                             <div class="ofertas-info">
                                 <p class="ofertas-discount">HASTA 20% DCTO. EN NESTEA</p>
                                 <a href="#" class="ofertas-button">Ver más</a>
@@ -421,7 +421,7 @@
     <div class="market-container">
         <!-- Farmatodo -->
         <button class="market-button">
-            <img src="../img/supermercados/farmatodo.png" alt="Farmatodo" class="market-image">
+            <img src="/src/img/supermercados/farmatodo.png" alt="Farmatodo" class="market-image">
             <div class="market-name">Farmatodo</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
@@ -434,7 +434,7 @@
 
         <!-- Fresco Market -->
         <button class="market-button">
-            <img src="../img/supermercados/FrescoMarket.png" alt="Fresco Market" class="market-image">
+            <img src="/src/img/supermercados/FrescoMarket.png" alt="Fresco Market" class="market-image">
             <div class="market-name">Fresco Market</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
@@ -447,7 +447,7 @@
 
         <!-- Forum -->
         <button class="market-button">
-            <img src="../img/supermercados/forum.png" alt="Forum" class="market-image">
+            <img src="/src/img/supermercados/forum.png" alt="Forum" class="market-image">
             <div class="market-name">Forum</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
@@ -460,7 +460,7 @@
 
         <!-- El Plazas -->
         <button class="market-button">
-            <img src="../img/supermercados/Plazas.png" alt="El Plazas" class="market-image">
+            <img src="/src/img/supermercados/Plazas.png" alt="El Plazas" class="market-image">
             <div class="market-name">El Plazas</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
@@ -477,7 +477,7 @@
     <div class="footer-left">
         <figure class="container-logo-footer">
             <a href="#">
-                <img class="logo-footer" src="../img/CLogo.png" alt="comparados">
+                <img class="logo-footer" src="/src/img/CLogo.png" alt="comparados">
                 <p>8XP5+CJ3, Carr. Panamericana, Los Teques 1201, Miranda</p>
             </a>
         </figure>
@@ -505,7 +505,7 @@
 
   <script src="https://kit.fontawesome.com/b7897c31ae.js" crossorigin="anonymous"></script>
 
-  <script src="../js/script.js"></script>
-  <script src="../js/script2.js"></script>
+  <script src="/src/js/script.js"></script>
+  <script src="/src/js/script2.js"></script>
 </body>
 </html>
