--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 
                 <li><a href="#">Categorías</a></li>
                 <li><a href="#">Favoritos</a></li>
-                <li><a href="../html/comparar.html">Comparador de Precios</a></li>
-                <li><a href="../html/form.html">Login</a></li>
+                <li><a href="/src/html/comparar.html">Comparador de Precios</a></li>
+                <li><a href="/src/html/form.html">Login</a></li>
             </ul>
 
             <form class="search-form">
@@ -89,7 +89,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/HarinaPan.png" alt="HarinaPan">
+                                <img class="Imagen" src="/src/img/HarinaPan.png" alt="HarinaPan">
                             </picture>
                         </a>
                     </div>
@@ -100,7 +100,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/AceiteMazeite.jpg" alt="AceiteMazeite">
+                                <img class="Imagen" src="/src/img/AceiteMazeite.jpg" alt="AceiteMazeite">
                             </picture>
                         </a>
                     </div>
@@ -111,7 +111,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/ArrozMary.png" alt="ArrozMary">
+                                <img class="Imagen" src="/src/img/ArrozMary.png" alt="ArrozMary">
                             </picture>
                         </a>
                     </div>
@@ -122,7 +122,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/AzucarMontalban.png" alt="AzucarMontalban">
+                                <img class="Imagen" src="/src/img/AzucarMontalban.png" alt="AzucarMontalban">
                             </picture>
                         </a>
                     </div>
@@ -133,7 +133,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/CafeAmanecer.png" alt="CafeAmanecer">
+                                <img class="Imagen" src="/src/img/AzucarMontalban.png" alt="CafeAmanecer">
                             </picture>
                         </a>
                     </div>
@@ -144,7 +144,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/CaraotaPanteraNegra.jpg" alt="CaraotaPanteraNegra">
+                                <img class="Imagen" src="/src/img/CaraotaPanteraNegra.jpg" alt="CaraotaPanteraNegra">
                             </picture>
                         </a>
                     </div>
@@ -155,7 +155,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/DiablitosUnderwood.jpg" alt="DiablitosUnderwood">
+                                <img class="Imagen" src="/src/img/DiablitosUnderwood.jpg" alt="DiablitosUnderwood">
                             </picture>
                         </a>
                     </div>
@@ -166,7 +166,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/HarinaTrigoMary.png" alt="HarinaTrigoMary">
+                                <img class="Imagen" src="/src/img/HarinaTrigoMary.png" alt="HarinaTrigoMary">
                             </picture>
                         </a>
                     </div>
@@ -177,7 +177,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/JamonEndPlumrose.jpg" alt="JamonEndPlumrose">
+                                <img class="Imagen" src="/src/img/JamonEndPlumrose.jpg" alt="JamonEndPlumrose">
                             </picture>
                         </a>
                     </div>
@@ -188,7 +188,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/KetchupPampero.jpg" alt="KetchupPampero">
+                                <img class="Imagen" src="/src/img/KetchupPampero.jpg" alt="KetchupPampero">
                             </picture>
                         </a>
                     </div>
@@ -199,7 +199,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/MargarinaMavesa.jpg" alt="MargarinaMavesa">
+                                <img class="Imagen" src="/src/img/MargarinaMavesa.jpg" alt="MargarinaMavesa">
                             </picture>
                         </a>
                     </div>
@@ -210,7 +210,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/MayonesaKraft.jpg" alt="MayonesaKraft">
+                                <img class="Imagen" src="/src/img/MayonesaKraft.jpg" alt="MayonesaKraft">
                             </picture>
                         </a>
                     </div>
@@ -221,7 +221,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/MayonesaMavesa.jpg" alt="MayonesaMavesa">
+                                <img class="Imagen" src="/src/img/MayonesaMavesa.jpg" alt="MayonesaMavesa">
                             </picture>
                         </a>
                     </div>
@@ -232,7 +232,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/PastaMaryPluma.jpg" alt="PastaMaryPluma">
+                                <img class="Imagen" src="/src/img/PastaMaryPluma.jpg" alt="PastaMaryPluma">
                             </picture>
                         </a>
                     </div>
@@ -243,7 +243,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/PastaMaryVermicelli.jpg" alt="PastaMaryVermicelli">
+                                <img class="Imagen" src="/src/img/PastaMaryVermicelli.jpg" alt="PastaMaryVermicelli">
                             </picture>
                         </a>
                     </div>
@@ -254,7 +254,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/Rikesa.jpg" alt="Rikesa">
+                                <img class="Imagen" src="/src/img/Rikesa.jpg" alt="Rikesa">
                             </picture>
                         </a>
                     </div>
@@ -265,7 +265,7 @@
                         <a href="/">
                             <h4><small> Imagen</small>Más</h4>
                             <picture>
-                                <img class="Imagen" src="../img/VinagreHeinz.jpg" alt="VinagreHeinz">
+                                <img class="Imagen" src="/src/img/VinagreHeinz.jpg" alt="VinagreHeinz">
                             </picture>
                         </a>
                     </div>
