--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <i class="fa-solid fa-bars"></i>
             <figure class="container-logo">
                 <a href="#">
-                    <img class="logo" src="src\img\CLogo.png" alt="Logo comparados">
+                    <img class="logo" src="./src/img/CLogo.png" alt="Logo comparados">
                 </a>
             </figure>
             <ul class="menu">
