Url de imagenenes supermercados

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
     <div class="market-container">
         <!-- Farmatodo -->
         <button class="market-button">
-            <img src="src/img/supermercados/farmatodo.png" alt="Farmatodo" class="market-image">
+            <img src="../Comparados/src/img/supermercados/farmatodo.png" alt="Farmatodo" class="market-image">
             <div class="market-name">Farmatodo</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
@@ -434,7 +434,7 @@
 
         <!-- Fresco Market -->
         <button class="market-button">
-            <img src="src/img/supermercados/FrescoMarket.png" alt="Fresco Market" class="market-image">
+            <img src="../Comparados/src/img/supermercados/FrescoMarket.png" alt="Fresco Market" class="market-image">
             <div class="market-name">Fresco Market</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
@@ -447,7 +447,7 @@
 
         <!-- Forum -->
         <button class="market-button">
-            <img src="src/img/supermercados/forum.png" alt="Forum" class="market-image">
+            <img src="../Comparados/src/img/supermercados/forum.png" alt="Forum" class="market-image">
             <div class="market-name">Forum</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
@@ -460,7 +460,7 @@
 
         <!-- El Plazas -->
         <button class="market-button">
-            <img src="src/img/supermercados/Plazas.png" alt="El Plazas" class="market-image">
+            <img src="../Comparados/src/img/supermercados/Plazas.png" alt="El Plazas" class="market-image">
             <div class="market-name">El Plazas</div>
             <div class="market-rating">
                 <span class="star">&#9733;</span>
